--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="dist/output.css">
     <title>Mammad Yahyayev</title>
+    <!-- TODO: Add meta tags for SEO-->
 </head>
 <body>
 <div id="root"></div>
